--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="./images/logo.png" alt="achit-logo"/>
+        <img src="./assets/logo.png" alt="achit-logo"/>
         <ul class="links">
             <li><a id="nav-link" href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
@@ -47,35 +47,35 @@
     </div>
     <section class="popular">
         <div id="items">
-            <img src="./images/category-1.jpg" alt="category1"/> 
+            <img src="./assets/category-1.jpg" alt="category1"/> 
             <p>T-Shirt</p>
         </div>
         <div id="items">
-            <img src="./images/category-2.jpg" alt="category2"/> 
+            <img src="./assets/category-2.jpg" alt="category2"/> 
             <p>Hand Bag</p>
         </div>
         <div id="items">
-            <img src="./images/category-3.jpg" alt="category3"/> 
+            <img src="./assets/category-3.jpg" alt="category3"/> 
             <p>Sandal</p>
         </div>
         <div id="items">
-            <img src="./images/category-4.jpg" alt="category4"/> 
+            <img src="./assets/category-4.jpg" alt="category4"/> 
             <p>Scarf Cap</p>
         </div>
         <div id="items">
-            <img src="./images/category-5.jpg" alt="category5"/> 
+            <img src="./assets/category-5.jpg" alt="category5"/> 
             <p>Shoes</p>
         </div>
         <div id="items">
-            <img src="./images/category-6.jpg" alt="category6"/> 
+            <img src="./assets/category-6.jpg" alt="category6"/> 
             <p>Pillow</p>
         </div>
         <div id="items">
-            <img src="./images/category-7.jpg" alt="category7"/> 
+            <img src="./assets/category-7.jpg" alt="category7"/> 
             <p>Pant</p>
         </div>
         <div id="items">
-            <img src="./images/category-8.jpg" alt="category8"/> 
+            <img src="./assets/category-8.jpg" alt="category8"/> 
             <p>Head Caps</p>
         </div>
     </section>
@@ -456,21 +456,21 @@
             <p id="p">Hot Releases</p>
             <hr>
             <div class="cate-con">
-                <img src="./images/showcase-img-1.jpg" alt="showcase1"/>
+                <img src="./assets/showcase-img-1.jpg" alt="showcase1"/>
                 <div>
                     <p>Hand bag</p>
                     <p id="cate-ocost">$140.55 <del id="cate-cost">$170</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/showcase-img-2.jpg" alt="showcase2"/>
+                <img src="./assets/showcase-img-2.jpg" alt="showcase2"/>
                 <div>
                     <p>Pillow</p>
                     <p id="cate-ocost">$40.55 <del id="cate-cost">$50</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/showcase-img-3.jpg" alt="showcase3"/>
+                <img src="./assets/showcase-img-3.jpg" alt="showcase3"/>
                 <div>
                     <p>Back Pack Bag</p>
                     <p id="cate-ocost">$240.55 <del id="cate-cost">$250</del></p>
@@ -481,21 +481,21 @@
             <p id="p">Deals and Outlets</p>
             <hr>
             <div class="cate-con">
-                <img src="./images/showcase-img-4.jpg" alt="showcase4"/>
+                <img src="./assets/showcase-img-4.jpg" alt="showcase4"/>
                 <div>
                     <p>Scarf Cap</p>
                     <p id="cate-ocost">$20.25 <del id="cate-cost">$35</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/showcase-img-5.jpg" alt="showcase5"/>
+                <img src="./assets/showcase-img-5.jpg" alt="showcase5"/>
                 <div>
                     <p>Colorful Shirt</p>
                     <p id="cate-ocost">$200 <del id="cate-cost">$220</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/showcase-img-6.jpg" alt="showcase6"/>
+                <img src="./assets/showcase-img-6.jpg" alt="showcase6"/>
                 <div>
                     <p>Colorful Shirt</p>
                     <p id="cate-ocost">$220.99 <del id="cate-cost">$260</del></p>
@@ -506,21 +506,21 @@
             <p id="p">Top Selling</p>
             <hr>
             <div class="cate-con">
-                <img src="./images/showcase-img-7.jpg" alt="showcase7"/>
+                <img src="./assets/showcase-img-7.jpg" alt="showcase7"/>
                 <div>
                     <p>Shoes</p>
                     <p id="cate-ocost">$340.35 <del id="cate-cost">$350.99</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/showcase-img-8.jpg" alt="showcase8"/>
+                <img src="./assets/showcase-img-8.jpg" alt="showcase8"/>
                 <div>
                     <p>Hand Bag</p>
                     <p id="cate-ocost">$90.55 <del id="cate-cost">$140</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/showcase-img-9.jpg" alt="showcase9"/>
+                <img src="./assets/showcase-img-9.jpg" alt="showcase9"/>
                 <div>
                     <p>Colorful Shirt</p>
                     <p id="cate-ocost">$310 <del id="cate-cost">$360</del></p>
@@ -531,21 +531,21 @@
             <p id="p">Trendy</p>
             <hr>
             <div class="cate-con">
-                <img src="./images/category-8.jpg" alt="showcase10"/>
+                <img src="./assets/category-8.jpg" alt="showcase10"/>
                 <div>
                     <p>Head Caps</p>
                     <p id="cate-ocost">$50 <del id="cate-cost">$85</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/category-3.jpg" alt="showcase11"/>
+                <img src="./assets/category-3.jpg" alt="showcase11"/>
                 <div>
                     <p>Sandals</p>
                     <p id="cate-ocost">$120.15 <del id="cate-cost">$150</del></p>
                 </div>
             </div>
             <div class="cate-con">
-                <img src="./images/category-2.jpg" alt="showcase12"/>
+                <img src="./assets/category-2.jpg" alt="showcase12"/>
                 <div>
                     <p>Hand Bag</p>
                     <p id="cate-ocost">$90.25 <del id="cate-cost">$130</del></p>
@@ -556,7 +556,7 @@
     <footer>
         <div class="footer-signin">
             <div class="email">
-                <img src="./images/icon-email.svg" alt="email-svg"/>
+                <img src="./assets/icon-email.svg" alt="email-svg"/>
                 <p>Sign in to Newsletter</p>
             </div>
             <div class="para">
@@ -569,7 +569,7 @@
         </div>
         <div class="footer-content">
             <div class="footer-info">
-                <img src="./images/logo.png" alt="info-logo"/><br>
+                <img src="./assets/logo.png" alt="info-logo"/><br>
                 <span>Contact</span>
                 <p><b>Address:</b> 13 Tlemcen Road,Street 32,Beb-Wahren</p>
                 <p><b>Phone:</b> +01 2222 365/ (+91) 01 2345 6789</p>
@@ -603,7 +603,7 @@
             </ul>
             <ul>
                 <p>Secured Payed Gateways</p>
-                <img src="./images/payment-method.png" alt="footer-png"/>
+                <img src="./assets/payment-method.png" alt="footer-png"/>
             </ul>
         </div>
         <hr>
