--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="./images/logo.png" alt="achit-logo"/>
+        <img src="./assets/logo.png" alt="achit-logo"/>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a id="nav-link" href="shop.html">Shop</a></li>
@@ -372,7 +372,7 @@
     <footer>
         <div class="footer-signin">
             <div class="email">
-                <img src="./images/icon-email.svg" alt="email-svg"/>
+                <img src="./assets/icon-email.svg" alt="email-svg"/>
                 <p>Sign in to Newsletter</p>
             </div>
             <div class="para">
@@ -385,7 +385,7 @@
         </div>
         <div class="footer-content">
             <div class="footer-info">
-                <img src="./images/logo.png" alt="info-logo"/><br>
+                <img src="./assets/logo.png" alt="info-logo"/><br>
                 <span>Contact</span>
                 <p><b>Address:</b> 13 Tlemcen Road,Street 32,Beb-Wahren</p>
                 <p><b>Phone:</b> +01 2222 365/ (+91) 01 2345 6789</p>
@@ -419,7 +419,7 @@
             </ul>
             <ul>
                 <p>Secured Payed Gateways</p>
-                <img src="./images/payment-method.png" alt="footer-png"/>
+                <img src="./assets/payment-method.png" alt="footer-png"/>
             </ul>
         </div>
         <hr>
